--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,12 @@ dependencies {
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
 
     //라이브러리 추가할 땐 버전 통일
-    implementation group: 'org.springframework', name: 'spring-core', version: '5.3.16'
-    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.16'
-    implementation group: 'org.springframework', name: 'spring-test', version: '5.3.16'
-    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.16'
+    implementation group: 'org.springframework', name: 'spring-core', version: '5.3.19'
+    implementation group: 'org.springframework', name: 'spring-context', version: '5.3.19'
+    implementation group: 'org.springframework', name: 'spring-test', version: '5.3.19'
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.19'
+    implementation group: 'org.springframework', name: 'spring-jdbc', version: '5.3.19'
+    implementation group: 'org.springframework', name: 'spring-tx', version: '5.3.19'
 
 
     compileOnly 'org.projectlombok:lombok:1.18.24'
@@ -47,6 +49,9 @@ dependencies {
 
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.4'
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
+
+    implementation group: 'org.mybatis', name: 'mybatis-spring', version: '2.0.7'
+    implementation group: 'org.mybatis', name: 'mybatis', version: '3.5.7'
 
 
 }
