--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,19 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-tx', version: '5.3.19'
 
 
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.4'
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
+
+    implementation group: 'org.mybatis', name: 'mybatis', version: '3.5.9'
+    implementation group: 'org.mybatis', name: 'mybatis-spring', version: '2.0.7'
+
+
+    implementation group: 'jstl', name: 'jstl', version: '1.2'
+
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.0.0'
+
+    implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.2.1.Final'
+
     compileOnly 'org.projectlombok:lombok:1.18.24'
     annotationProcessor 'org.projectlombok:lombok:1.18.24'
     testCompileOnly 'org.projectlombok:lombok:1.18.24'
@@ -44,16 +57,6 @@ dependencies {
     implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version:'2.17.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version:'2.17.2'
     implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version:'2.17.2'
-
-    implementation group: 'jstl', name: 'jstl', version: '1.2'
-
-    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.4'
-    implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.1'
-
-    implementation group: 'org.mybatis', name: 'mybatis-spring', version: '2.0.7'
-    implementation group: 'org.mybatis', name: 'mybatis', version: '3.5.7'
-
-
 }
 
 test {
